Use media query to solve issue with spave above navbar on collapse

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,11 +19,15 @@ html {
 }
 
 body{
-  padding-top: 60px;
+  //padding-top: 60px;
   max-width:980px;
   margin: 0 auto;
 }
-
+@media (min-width: 979px) {
+  body {
+    padding-top: 60px;
+  }
+}
 
 
 section{
